--- a/SBO/styles/styles.css
+++ b/SBO/styles/styles.css
@@ -1,5 +1,24 @@
 body{
     background-color: rgb(51, 50, 49);
     color: rgb(255, 255, 255);
-   font-family: 'marspolice';
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 15px;
+    
+}
+
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main{
+    display: flex;
+    flex-direction: row;
+}
+
+h4{
+    font-size: 16px;
 }
