--- a/SBO/styles/styles.css
+++ b/SBO/styles/styles.css
@@ -21,37 +21,72 @@ header{
 
 li{
     display: inline-block;
+    margin: 20px;
+}
+
+a{
+    color: white;
+}
+
+a:hover{
+    color: yellow;
+    transition: 0.4s all;
+}
+
+#criarContaBtn{
+    border: 2px solid yellow;
+    padding: 10px;
+    border-radius: 15px;
+}
+
+#criarContaBtn:hover{
+    background-color: yellow;
+    color: rgb(0, 0, 0);
 }
 
 h1{
-    font-weight: 200;
+    font-size: 45px;
+    font-weight: 50;
 }
 
 h3{
-    font-weight: 200;
+    font-weight: 50;
     font-size: 16px;
 }
 
 main{
-    margin-top: 100px;
+    margin-top: 50px;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 form{
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 70%;
+}
+
+form [type="submit"]{
+    height: 40px;
 }
 
 input{
     margin-top: 20px;
-    height: 15px;
+    height: 35px;
     padding: 10px;
     border-radius: 20px;
+    border: none;
+    font-size: 15px;
 }
 
 img{
-    width: 450px;
+    margin-top: 100px;
+    margin-left: 40px;
+    width: 650px;
+}
 
+footer{
+    margin-top: 100px;
 }
